# refactored-garbanzo

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml  project-1.yml  project-2.yml
project-1/: pyproject.toml  readme.md
project-2/: pyproject.toml  readme.md
