[tool.poetry]
name = "tmp.qfap5ots9q"
version = "0.1.0"
description = ""
authors = ["Ole-Martin Bratteng <ole-martin@bratteng.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
