[tool.poetry]
name = "project-2"
version = "0.1.0"
description = ""
authors = ["Ole-Martin Bratteng <ole-martin@bratteng.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "0.13.2"
autopep8 = "^1.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
